# ros-basics

./: README.md
node_template/: CMakeLists.txt  package.xml
node_template/include/: simple_node.h
node_template/launch/: play.launch  record.launch  simple_node.launch
node_template/src/: simple_node.cpp  simple_node_base.cpp
